# Stack_Sage

./: .env.example  .gitignore  AGENTIC_FEATURES.md  ANTI_HALLUCINATION_IMPROVEMENTS.md  CARD_SEARCH_FEATURE.md  CARD_SEARCH_IMPLEMENTATION.md  CARD_SEARCH_UX_IMPROVEMENTS.md  CHANGES.md  CHANGES_SUMMARY.md  COST_SAVINGS_GUIDE.md  DEBUGGING_HALLUCINATION.md  FIXES_APPLIED.md  FRONTEND_IMPROVEMENTS.md  FRONTEND_POLISH_UPDATES.md  FRONTEND_RECONSTRUCTION.md  IMPLEMENTATION_SUMMARY.md  LIVE_AUTOCOMPLETE_CARD_SEARCH.md  MULTI_AGENT_ACTIVATED.md  MULTI_AGENT_QUICKSTART.md  MULTI_AGENT_REBUILD_SUMMARY.md  MULTI_AGENT_SYSTEM.md  Makefile  OPTIMIZATIONS.md  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_SUMMARY.md  PRODUCTION_FEATURES.md  QUICKSTART.md  QUICK_OPTIMIZATION_GUIDE.md  README.md  RagBuildingGuide.md  TAVILY_IMPLEMENTATION.md  TAVILY_SETUP.md  TESTING_GUIDE.md  USAGE.md  debug_search_tool.py  dev.sh  env.example  evaluation_results.csv  evaluation_results_final.txt  loomVideoLink.txt  (+14 more)
backend/: SETUP.md  requirements.txt
backend/api/: __init__.py  server.py
backend/cli/: __init__.py  main.py
backend/core/: __init__.py  agent_state.py  bm25_retriever.py  chunker.py  config.py  deck_models.py  deck_validator.py  document_loader.py  evaluateApp.ipynb  llm_client.py  meta_cache.py  multi_agent_graph.py  rag_pipeline.py  ragasEvaluate.py  retriever.py  scryfall.py  tools.py  vector_store.py
backend/core/agents/: __init__.py  planner.py  (+6 more)
backend/data/: MagicCompRules.txt
frontend/: env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
