[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stack-sage"
version = "0.1.0"
description = "An intelligent Magic: The Gathering rules assistant powered by RAG"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Stack Sage Team"}
]
keywords = ["magic", "mtg", "rag", "ai", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "python-dotenv==1.0.0",
    "qdrant-client==1.12.1",
    "langchain-qdrant==0.2.1",
    "langchain-openai==0.3.14",
    "openai==1.109.1",
    "anthropic==0.70.0",
    "langchain-community==0.3.19",
    "pypdf==5.1.0",
    "tiktoken==0.8.0",
    "requests==2.32.3",
    "tavily-python==0.5.0",
    "sentence-transformers==3.3.1",
    "ragas==0.3.7",
    "rich>=13.0.0",
    "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "notebook>=7.0.0",
]

[project.scripts]
stack-sage = "backend.cli.main:main"

[tool.setuptools]
packages = ["backend", "backend.core", "backend.cli", "backend.api"]

[tool.setuptools.package-data]
backend = ["data/*.txt", "data/*.pdf"]

